# SimpleWidgetsLearning

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  window.cpp  window.h
